--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,7 @@ repositories {
 }
 
 dependencies {
-    testCompile("org.assertj:assertj-core:3.11.1")
+    testImplementation("org.assertj:assertj-core:3.27.3")
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
-    // https://mvnrepository.com/artifact/com.google.guava/guava
-    compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
-    // https://mvnrepository.com/artifact/org.assertj/assertj-core
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.18.0'
+    implementation("com.google.guava:guava:33.4.8-jre")
 }
